--- a/proxy/templates/nginx.tmpl
+++ b/proxy/templates/nginx.tmpl
@@ -177,6 +177,9 @@ server {
 	include /etc/nginx/vhost.d/default;
 	{{ end }}
 
+	auth_basic "CPF API";
+	auth_basic_user_file /etc/nginx/htpasswd;
+
 	location / {
 		{{ if eq $proto "uwsgi" }}
 		include uwsgi_params;
@@ -211,6 +214,9 @@ server {
 	{{ else if (exists "/etc/nginx/vhost.d/default") }}
 	include /etc/nginx/vhost.d/default;
 	{{ end }}
+
+	auth_basic "CPF API";
+	auth_basic_user_file /etc/nginx/htpasswd;
 
 	location / {
 		{{ if eq $proto "uwsgi" }}
