--- a/frontend/common/base.css
+++ b/frontend/common/base.css
@@ -110,7 +110,7 @@ input[type="checkbox"] {
 	border-top-right-radius: 1px;
 }
 
-#new-todo,
+#new-cpf,
 .edit {
 	position: relative;
 	margin: 0;
@@ -135,7 +135,7 @@ input[type="checkbox"] {
 	font-smoothing: antialiased;
 }
 
-#new-todo {
+#new-cpf {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.02);
@@ -174,39 +174,39 @@ label[for='toggle-all'] {
 	color: #737373;
 }
 
-#todo-list {
+#cpf-list {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
 
-#todo-list li {
+#cpf-list li {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px dotted #ccc;
 }
 
-#todo-list li:last-child {
+#cpf-list li:last-child {
 	border-bottom: none;
 }
 
-#todo-list li.editing {
+#cpf-list li.editing {
 	border-bottom: none;
 	padding: 0;
 }
 
-#todo-list li.editing .edit {
+#cpf-list li.editing .edit {
 	display: block;
 	width: 506px;
 	padding: 13px 17px 12px 17px;
 	margin: 0 0 0 43px;
 }
 
-#todo-list li.editing .view {
+#cpf-list li.editing .view {
 	display: none;
 }
 
-#todo-list li .toggle {
+#cpf-list li .toggle {
 	text-align: center;
 	width: 40px;
 	/* auto, since non-WebKit browsers doesn't support input styling */
@@ -223,7 +223,7 @@ label[for='toggle-all'] {
 	appearance: none;
 }
 
-#todo-list li .toggle:after {
+#cpf-list li .toggle:after {
 	content: '✔';
 	/* 40 + a couple of pixels visual adjustment */
 	line-height: 43px;
@@ -232,14 +232,14 @@ label[for='toggle-all'] {
 	text-shadow: 0 -1px 0 #bfbfbf;
 }
 
-#todo-list li .toggle:checked:after {
+#cpf-list li .toggle:checked:after {
 	color: #85ada7;
 	text-shadow: 0 1px 0 #669991;
 	bottom: 1px;
 	position: relative;
 }
 
-#todo-list li label {
+#cpf-list li label {
 	white-space: pre;
 	word-break: break-word;
 	padding: 15px 60px 15px 15px;
@@ -250,12 +250,12 @@ label[for='toggle-all'] {
 	transition: color 0.4s;
 }
 
-#todo-list li.completed label {
+#cpf-list li.completed label {
 	color: #a9a9a9;
 	text-decoration: line-through;
 }
 
-#todo-list li .destroy {
+#cpf-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -270,7 +270,7 @@ label[for='toggle-all'] {
 	transition: all 0.2s;
 }
 
-#todo-list li .destroy:hover {
+#cpf-list li .destroy:hover {
 	text-shadow: 0 0 1px #000,
 				 0 0 10px rgba(199, 107, 107, 0.8);
 	-webkit-transform: scale(1.3);
@@ -278,19 +278,19 @@ label[for='toggle-all'] {
 	transform: scale(1.3);
 }
 
-#todo-list li .destroy:after {
+#cpf-list li .destroy:after {
 	content: '✖';
 }
 
-#todo-list li:hover .destroy {
+#cpf-list li:hover .destroy {
 	display: block;
 }
 
-#todo-list li .edit {
+#cpf-list li .edit {
 	display: none;
 }
 
-#todo-list li.editing:last-child {
+#cpf-list li.editing:last-child {
 	margin-bottom: -1px;
 }
 
@@ -321,7 +321,7 @@ label[for='toggle-all'] {
 				0 44px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-#todo-count {
+#cpf-count {
 	float: left;
 	text-align: left;
 }
@@ -385,11 +385,11 @@ label[for='toggle-all'] {
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	#toggle-all,
-	#todo-list li .toggle {
+	#cpf-list li .toggle {
 		background: none;
 	}
 
-	#todo-list li .toggle {
+	#cpf-list li .toggle {
 		height: 40px;
 	}
 
