--- a/frontend/common/base.css
+++ b/frontend/common/base.css
@@ -149,11 +149,11 @@ input[type="checkbox"] {
 	border-top: 1px dotted #adadad;
 }
 
-label[for='toggle-all'] {
+label[for='blacklist-all'] {
 	display: none;
 }
 
-#toggle-all {
+#blacklist-all {
 	position: absolute;
 	top: -42px;
 	left: -4px;
@@ -163,14 +163,14 @@ label[for='toggle-all'] {
 	border: none;
 }
 
-#toggle-all:before {
+#blacklist-all:before {
 	content: '»';
 	font-size: 28px;
 	color: #d9d9d9;
 	padding: 0 25px 7px;
 }
 
-#toggle-all:checked:before {
+#blacklist-all:checked:before {
 	color: #737373;
 }
 
@@ -206,7 +206,7 @@ label[for='toggle-all'] {
 	display: none;
 }
 
-#cpf-list li .toggle {
+#cpf-list li .blacklist {
 	text-align: center;
 	width: 40px;
 	/* auto, since non-WebKit browsers doesn't support input styling */
@@ -223,7 +223,7 @@ label[for='toggle-all'] {
 	appearance: none;
 }
 
-#cpf-list li .toggle:after {
+#cpf-list li .blacklist:after {
 	content: '✔';
 	/* 40 + a couple of pixels visual adjustment */
 	line-height: 43px;
@@ -232,7 +232,7 @@ label[for='toggle-all'] {
 	text-shadow: 0 -1px 0 #bfbfbf;
 }
 
-#cpf-list li .toggle:checked:after {
+#cpf-list li .blacklist:checked:after {
 	color: #85ada7;
 	text-shadow: 0 1px 0 #669991;
 	bottom: 1px;
@@ -384,16 +384,16 @@ label[for='toggle-all'] {
 */
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-	#toggle-all,
-	#cpf-list li .toggle {
+	#blacklist-all,
+	#cpf-list li .blacklist {
 		background: none;
 	}
 
-	#cpf-list li .toggle {
+	#cpf-list li .blacklist {
 		height: 40px;
 	}
 
-	#toggle-all {
+	#blacklist-all {
 		top: -56px;
 		left: -15px;
 		width: 65px;
