--- a/proxy/templates/nginx.tmpl
+++ b/proxy/templates/nginx.tmpl
@@ -177,16 +177,15 @@ server {
 	include /etc/nginx/vhost.d/default;
 	{{ end }}
 
+	auth_basic "CPF Restricted";
+	auth_basic_user_file /etc/nginx/htpasswd;
+
 	location / {
 		{{ if eq $proto "uwsgi" }}
 		include uwsgi_params;
 		uwsgi_pass {{ trim $proto }}://{{ trim $host }};
 		{{ else }}
 		proxy_pass {{ trim $proto }}://{{ trim $host }};
-		{{ end }}
-		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
-		auth_basic	"Restricted {{ $host }}";
-		auth_basic_user_file	{{ (printf "/etc/nginx/htpasswd/%s" $host) }};
 		{{ end }}
                 {{ if (exists (printf "/etc/nginx/vhost.d/%s_location" $host)) }}
                 include {{ printf "/etc/nginx/vhost.d/%s_location" $host}};
@@ -212,16 +211,15 @@ server {
 	include /etc/nginx/vhost.d/default;
 	{{ end }}
 
+	auth_basic "CPF Restricted";
+	auth_basic_user_file /etc/nginx/htpasswd;
+
 	location / {
 		{{ if eq $proto "uwsgi" }}
 		include uwsgi_params;
 		uwsgi_pass {{ trim $proto }}://{{ trim $host }};
 		{{ else }}
 		proxy_pass {{ trim $proto }}://{{ trim $host }};
-		{{ end }}
-		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
-		auth_basic	"Restricted {{ $host }}";
-		auth_basic_user_file	{{ (printf "/etc/nginx/htpasswd/%s" $host) }};
 		{{ end }}
                 {{ if (exists (printf "/etc/nginx/vhost.d/%s_location" $host)) }}
                 include {{ printf "/etc/nginx/vhost.d/%s_location" $host}};
