--- a/frontend/common/base.css
+++ b/frontend/common/base.css
@@ -143,6 +143,30 @@ input[type="checkbox"] {
 	box-shadow: none;
 }
 
+#filter-cpf {
+	position: relative;
+	margin: 0;
+	width: 100%;
+	font-size: 20px;
+	font-family: inherit;
+	line-height: 1.4em;
+	border: 0;
+	outline: none;
+	color: #586aa7;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-ms-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+}
+
 #main {
 	position: relative;
 	z-index: 2;
